--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -7,4 +7,7 @@
     <li>
         <a routerLink="/auth/register"> Ir a Register </a>
     </li>
+    <li>
+        <a routerLink="/heroes"> Ir a Heroe </a>
+    </li>
 </ul>
