--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<h1>Heroes app</h1>
+<hr>
+
+<!-- Implementación adecuada de rutas hijas para módulo de heroes -->
+<router-outlet></router-outlet>
