--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -1,1 +1,14 @@
-<p>listado works!</p>
+<h1>Listado de heroes</h1>
+<hr>
+
+<div fxLayout="row wrap" 
+     fxLayoutAlign="center" 
+     fxLayoutGap="30px"
+     fxLayout.xs="column">
+    <div fxFlex="20" 
+         fxFlex.lg="15" 
+         fxFlex.sm="30" 
+         *ngFor="let heroe of heroes">
+        <app-heroe-card [item]="heroe"></app-heroe-card>
+    </div>
+</div>
