--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,1 +1,34 @@
-<p>buscar works!</p>
+<div fxLayout="column">
+    <div>
+        <h1>Buscador de Héroes</h1>
+        <mat-divider></mat-divider>
+    </div>
+    <div fxLayout="column">
+        <h3>Buscador</h3>
+        <!-- <form class="example-form"> -->
+        <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Héroe</mat-label>
+            <input type="text" placeholder="Pick one" aria-label="Number" matInput [(ngModel)]="termino"
+                [matAutocomplete]="auto" (input)="buscando()">
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
+                (optionSelected)="opcionSeleccionada($event)">
+                <mat-option *ngFor="let heroe of heroes" [value]="heroe">
+                    {{heroe.superhero}}
+                </mat-option>
+                <mat-option *ngIf="(this.heroes.length == 0) 
+                            && (this.termino.trim().length > 0)">
+                    No se encontro nada con el termino: <b>{{termino}}</b>
+                </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
+        <!-- </form> -->
+    </div>
+</div>
+
+<div>
+    <pre>{{heroeSeleccionado | json}}</pre>
+</div>
+
+<!-- <div *ngIf="this.heroeSeleccionado != undefined">
+    <app-heroe-card [item]="this.heroeSeleccionado"></app-heroe-card>
+</div> -->
