--- a/src/app/heroes/pages/ver/ver.component.html
+++ b/src/app/heroes/pages/ver/ver.component.html
@@ -1,1 +1,34 @@
-<p>ver works!</p>
+<mat-grid-list cols="1" *ngIf="!heroe;else cardHeroe">
+    <mat-grid-tile>
+        <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+</mat-grid-list>
+
+<ng-template #cardHeroe>
+    <!-- # Card heroe -->
+    <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="35px">
+        <div [fxFlex]="50">
+            <h1> {{heroe.superhero}} <small>- {{ heroe.alter_ego }}</small></h1>
+            <mat-divider></mat-divider>
+            <br>
+            <img [src]="heroe | imagen" alt="">
+        </div>
+        <div [fxFlex]="50">
+            <h1>{{ heroe.publisher }}</h1>
+            <mat-divider></mat-divider>
+            <mat-list>
+                <mat-list-item><b>Primera aparición</b>: {{heroe.first_appearance}} </mat-list-item>
+                <mat-list-item><b>Personajes</b>: {{heroe.characters}} </mat-list-item>
+                <mat-list-item><b>Publicado por</b>: {{heroe.publisher}} </mat-list-item>
+                <mat-list-item><b>Alter ego</b>: {{heroe.alter_ego}} </mat-list-item>
+            </mat-list>
+            <br>
+            <span class="box">
+                <button mat-button color="warn"
+                        (click)="regresar()">
+                    Regresar
+                </button>
+            </span>
+        </div>
+    </div>
+</ng-template>
