--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -2,45 +2,28 @@
 <hr>
 <br>
 
-<div fxLayout="row"
-     fxLayout.xs="column"
-     fxLayoutGap="40px">
-    <div fxLayout="column" 
-         fxFlex="50">
-        <div fxLayout="row"
-             fxLayout.xs="column"
-             fxLayoutGap="20px">
+<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="40px">
+    <div fxLayout="column" fxFlex="50">
+        <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
             <mat-form-field fxFlex="100">
                 <mat-label> Super Héroe </mat-label>
-                <input matInput
-                       type="text"
-                       [(ngModel)]="heroe.superhero"
-                       required>
+                <input matInput type="text" [(ngModel)]="heroe.superhero" required>
             </mat-form-field>
 
             <mat-form-field fxFlex="100">
                 <mat-label>Alter ego</mat-label>
-                <input matInput
-                       type="text"
-                       [(ngModel)]="heroe.alter_ego"
-                       required>
+                <input matInput type="text" [(ngModel)]="heroe.alter_ego" required>
             </mat-form-field>
         </div>
 
         <mat-form-field fxFlex="100">
             <mat-label>Primera aparición</mat-label>
-            <input matInput
-                   type="text"
-                   [(ngModel)]="heroe.first_appearance"
-                   required>
+            <input matInput type="text" [(ngModel)]="heroe.first_appearance" required>
         </mat-form-field>
 
         <mat-form-field fxFlex="100">
             <mat-label>Personajes</mat-label>
-            <input matInput
-                   type="text"
-                   [(ngModel)]="heroe.characters"
-                   required>
+            <input matInput type="text" [(ngModel)]="heroe.characters" required>
         </mat-form-field>
 
         <mat-form-field fxFlex="100">
@@ -54,26 +37,29 @@
 
         <mat-form-field fxFlex="100">
             <mat-label>Foto URL</mat-label>
-            <input matInput
-                   type="url"
-                   [(ngModel)]="heroe.alt_img"
-                   required>
+            <input matInput type="url" [(ngModel)]="heroe.alt_img" required>
         </mat-form-field>
 
-        <span class="box">
-            <button mat-raised-button
-                    color="primary"
-                    (click)="guardarHeroe()">
+        <span [ngClass]="{'two-buttons': this.rutaActiva == 'editar' && this.heroe.id,
+                          'box': this.rutaActiva == 'editar' && !this.heroe.id}">
+            <button mat-raised-button color="primary" (click)="guardarHeroe()">
                 <mat-icon>
                     {{(this.rutaActiva == 'agregar')? 'add' : 'edit'}}
                 </mat-icon>
                 {{(this.rutaActiva == 'agregar')? 'Agregar' : 'Editar'}}
             </button>
+            <button *ngIf="this.rutaActiva == 'editar' 
+                           && this.heroe.id" 
+                    mat-raised-button
+                    (click)="eliminarHeroe()"
+                    color="warn">
+                <mat-icon>remove</mat-icon>
+                Borrar
+            </button>
         </span>
     </div>
 
-    <div fxLayout.xs="column" 
-         fxFlex="50">
+    <div fxLayout.xs="column" fxFlex="50">
         <img [src]="heroe | imagen" alt="Imagen {{heroe.alt_img}}.jpg">
     </div>
 
