--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -3,8 +3,10 @@
         <button mat-icon-button (click)="sidenav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-        <div class="box">
-            <button mat-button>
+        <div class="logout-div">
+            <span>Ignacio</span>
+            <button mat-button
+                    (click)="logout()">
                 Logout
             </button>
         </div>
