--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,21 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     justify-content: flex-start;
     /* margin-left: auto; */
 }
+
+.two-buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-content: center;
+    justify-content: space-between;
+    /* margin-left: auto; */
+}
+
+.logout-div {
+    width: 10%;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-end;
+    justify-content: space-around;
+    margin-left: auto;
+}
