--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,7 +1,15 @@
 <mat-grid-list cols="1">
     <mat-grid-tile>
-        <button mat-raised-button color="primary" (click)="login()">
-            Ingresar
-        </button>
+        <div>
+            <button mat-raised-button color="primary" (click)="login()">
+                Ingresar
+            </button>
+        </div>
+
+        <div class="ml-light">
+            <button mat-raised-button color="basic" (click)="loginWithoutCredentials()">
+                Ingresar sin login
+            </button>
+        </div>
     </mat-grid-tile>
 </mat-grid-list>
