--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     justify-content: space-around;
     margin-left: auto;
 }
+
+.ml-light {
+    margin-left: 1.5rem;
+}
